--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-*{
+ *{
     color: white;
     transition:0.3s ease-in-out;
     font-family:sans-serif;
@@ -16,6 +16,21 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.game-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+    border-radius: 15px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+    width: 22em; 
+    height: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 .turn-container{
     margin: auto;
@@ -48,7 +63,7 @@ body{
     background-color: #8c7895;
     height: 55px;
     z-index: -1;
-}
+} 
 
 
 /* main */
@@ -72,11 +87,18 @@ body{
     background-color:#856480;
 }
 
+#result{
+    font-size: 32px;
+    font-weight: bolder;
+    color: #7f5069;
+    line-height: 1.5em;
+}
 #play-again{
+    background-color:#938da7;
     font-size: 1em;
     padding: 12px;
     width: 8em;
-    color: #938da7;
+    color: #ddd9e8;
     border: none;
     cursor: pointer;
     border-radius: 12px;
@@ -86,4 +108,6 @@ body{
 #play-again:hover{
     background-color:#856480;
     color: white;
-}
+} 
+
+
